# idrisi

./: .gitignore  LICENSE  README.md  makemap.sh
python/: README.md  pyproject.toml
python/scripts/: makemap.sh
python/src/idrisi/: __init__.py  cs.py  delmap.py  heightmap.py  jrandom.py  levelmap.py  mapworker.py
python/src/idrisi/tk/: __init__.py
src/idrisi/: cs.py  delmap.py  heightmap.py  jrandom.py  jutil.py  levelmap.py
src/idrisi/tk/: mapcanvas.py
